# chapiana

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.md.jinja  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  tasks.py  tox.ini  wait_for_storage_engine.py
docs/release-cycle-management/: changelog.rst
nginx/: nginx.conf
nginx/ssl/: cert.pem  key.pem
requirements/: base.txt  ci.txt  dev.txt  docs.txt  test.txt
src/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/accounts/: admin.py  apps.py  forms.py  managers.py  models.py  signals.py  urls.py  utils.py  views.py
src/chat/: admin.py  consumers.py  context_processors.py  models.py  routing.py  signals.py  tasks.py  utils.py
src/chat/constants/: symbolic_constants.py
src/common/: base.py  middleware.py  models.py  utils.py
src/config/: __init__.py  asgi.py  celery.py  common.py  local.py  production.py  urls.py  wsgi.py
tests/: settings.py  urls.py
tests/accounts/: __init__.py  test_tasks.py
