[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chapiana_bikodes"
version = "0.1.0"
description = "A real-time chat application."
authors = [
  { name = "Biko Steven", email = "bikocodes@gmail.com" },
]
license = { text = "MIT" }
keywords = ["chat", "chat app", "chat application"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx",
    "gidgethub[httpx]",
    "django",
]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/BiKodes/chapiana"
Documentation = "https://readthedocs.org"
Issues = "https://github.com/BiKodes/chapiana/issues"
Changelog = "https://github.com/BiKodes/chapiana/CHANGELOG.md"

# Dynamic configuration
[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["chapiana_bikodes"]
namespaces = false

# Black formatting
[tool.black]
line-length = 80
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 80

[tool.ruff]
unsafe-fixes = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "*/migrations/*.py",
    "staticfiles/*",
]

[tool.ruff.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

# Coverage configuration
[tool.coverage.run]
branch = true
omit = ["*/migrations/*", "*/schemas/*"]
disable_warnings = ["include-ignored"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "^\\s*\\.\\.\\.$",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "coverage"
